src/styles/components.scss
// section style
.section {
  @apply py-16;
}

// container
.container {
  @apply mx-auto max-w-[1202px] md:px-3;
}

// form style
.form-inputs * {
  @apply mb-5 leading-10;
}

// social icon style
.social-icons {
  li {
    @apply mr-2 inline-block;
    a {
      @apply inline-flex h-11 w-11 items-center justify-center rounded-full bg-white text-center transition-all duration-200 hover:bg-primary;

      svg {
        @apply m-auto h-11 fill-dark text-xl;
      }

      path {
        @apply transition-all duration-200;
      }

      &:hover path {
        @apply fill-white;
      }
    }
  }
}

// tab
.tab {
  @apply overflow-hidden rounded-lg border border-border;
  &-nav {
    @apply flex border-b border-border bg-theme-light;
    @apply m-0 #{!important};
    @apply list-none #{!important};

    &-item {
      @apply cursor-pointer border-b-[3px] border-border py-2 text-lg opacity-80;
      @apply my-0 #{!important};
      @apply text-dark #{!important};
      @apply px-8 #{!important};

      &.active {
        @apply border-b-[3px] border-dark opacity-100;
      }
    }
  }
  &-content {
    &-panel {
      @apply p-8;
      p {
        @apply mb-0;
      }
      &.active {
        @apply block;
      }
    }
  }
}

// notice
.notice {
  .notice-body {
    p {
      @apply my-0 text-text;
    }
  }

  &.note {
    .notice-head {
      @apply bg-[#7fb6d9];
    }
    .notice-body {
      @apply bg-[#7fb6d9]/25;
    }
  }

  &.tip {
    .notice-head {
      @apply bg-[#73e273];
    }
    .notice-body {
      @apply bg-[#73e273]/25;
    }
  }

  &.info {
    .notice-head {
      @apply bg-[#ffc392];
    }
    .notice-body {
      @apply bg-[#f0b37e]/25;
    }
  }

  &.warning {
    .notice-head {
      @apply bg-[#ff918c];
    }
    .notice-body {
      @apply bg-[#ff918c]/25;
    }
  }
}

// tabcomponent
.tab-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  border-bottom: 1px solid #aaa;
}

.tab-nav-item {
  padding: 0.5rem 1rem;
  cursor: pointer;
  opacity: 0.8;
}

.tab-nav-item.active {
  border-bottom: 3px solid #aaa;
  opacity: 1;
}

.tab-content .tab-content-panel {
  display: none;
  padding: 1rem 0.5rem;
}

.tab-content .tab-content-panel.active {
  display: block;
}

// accordion
.accordion {
  background-color: #fff;
}

.accordion-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  cursor: pointer;
  font-size: 1.6rem;
}

.accordion-icon {
  width: 0.78em;
  height: 0.78em;
  transform: rotate(0deg);
  transition: transform 0.2s ease;
}

.accordion-content {
  max-height: 0;
  overflow: hidden;
  padding: 0 1rem;
}

.accordion.active .accordion-icon {
  transform: rotate(180deg);
}

.accordion.active .accordion-content {
  max-height: 100vh;
}

// form style
.form-control,
.form-select {
  @apply h-[60px] w-full rounded-lg border-border text-dark placeholder:text-[#B0B0B0] focus:border-primary focus:ring-transparent;
}

.form-label {
  @apply mb-2 block font-secondary text-[#555];
}

select:invalid {
  color: #b0b0b0 !important;
}
// features page
.project-icon {
  svg {
    @apply h-8 w-8;
  }
}
// badge
.badge {
  @apply relative top-[0.625rem] rounded-md px-[0.8rem] py-[0.45rem] text-xs font-semibold text-white;
  &.added {
    @apply bg-[#00ce92];
  }
  &.remove {
    @apply bg-[#973cff];
  }
  &.depreciate {
    @apply bg-[#ff3158];
  }
  &.changed {
    @apply bg-[#3a9cff];
  }
  &.security {
    @apply bg-[#9c275f];
  }
}
// youtube video
.youtube {
  div {
    @apply flex justify-center;
  }
}
// content style
.content {
  @apply prose max-w-none;
  @apply prose-headings:mb-[.9em] prose-headings:mt-[.5em] prose-headings:font-bold prose-headings:text-dark;
  @apply prose-h1:text-h1-sm md:prose-h1:text-h1;
  @apply prose-h2:text-h2-sm md:prose-h2:text-h2;
  @apply prose-h3:text-h3-sm md:prose-h3:text-h3;
  @apply prose-hr:border-border;
  @apply prose-p:text-base prose-p:text-text;
  @apply prose-blockquote:px-4 prose-blockquote:py-1 prose-blockquote:text-dark;
  @apply prose-code:px-1 prose-code:text-primary;
  @apply prose-pre:rounded-md;
  @apply prose-strong:text-dark;
  @apply prose-a:text-primary prose-a:no-underline hover:prose-a:underline;
  @apply prose-li:text-text;
  @apply prose-table:relative prose-table:overflow-hidden prose-table:rounded-lg prose-table:before:absolute prose-table:before:left-0 prose-table:before:top-0 prose-table:before:h-full prose-table:before:w-full prose-table:before:rounded-[inherit] prose-table:before:border prose-table:before:content-[""];
  @apply prose-thead:border-border prose-thead:bg-theme-light;
  @apply prose-th:relative prose-th:z-10 prose-th:px-4 prose-th:py-[18px] prose-th:text-dark;
  @apply prose-tr:border-border;
  @apply prose-td:relative prose-td:z-10 prose-td:px-3 prose-td:py-[18px];
  @apply marker:text-primary;
  @apply prose-img:rounded-md;
  .btn {
    p {
      @apply m-0 text-white;
    }
  }
  h5 + p {
    @apply mt-2.5;
  }

  p + h5 {
    @apply mt-5;
  }

  p + h4,
  ul + h4 {
    @apply mt-10;
  }

  h4 + p,
  h4 + ul {
    @apply mt-5;
  }
}

.key-feature-grid {
  p {
    @apply mt-3 text-sm;
  }

  .icon {
    @apply h-6 w-6;

    svg {
      @apply text-[#FA7398];
    }
  }
}
.tab-icon {
  svg {
    @apply h-6 w-4 fill-primary text-primary;
  }
}
/* ... */

